<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />


        <item
            android:id="@+id/nav_empleado"
            android:icon="@drawable/baseline_group_24"
            android:title="@string/menu_empleado" />

        <item
            android:id="@+id/nav_planilla"
            android:icon="@drawable/baseline_grading_24"
            android:title="@string/menu_planilla" />

        <item
            android:id="@+id/nav_ubicacion_planilla"
            android:icon="@drawable/baseline_my_location_24"
            android:title="@string/nav_menu_location" />

        <item
            android:id="@+id/nav_importar_empleados"
            android:icon="@drawable/baseline_contact_phone_24"
            android:title="@string/importar_empleados" />


    </group>
</menu>